1999-08-22  Havoc Pennington  <hp@pobox.com>

	* gnome-icon-list.c (gnome_icon_list_thaw): Show the item on 
	thaw, even if the dirty flag is not set (so it works if you 
	freeze then thaw without ever changing anything). Fix from 
	David Meybohm <dm89754@ucf.edu> closes bug 1833.

1999-08-22  Havoc Pennington  <hp@pobox.com>

	* gnome-icon-sel.c (gnome_icon_selection_show_icons): Patch from 
	David Meybohm <dm89754@ucf.edu> fixes multiple-progress-bar bug
	(happened when changing directories during loading). Closes bug 
	1832.

Sat Aug 21 12:47:28 1999  George Lebl  <jirka@5z.com>

	* gnome-pixmap.c: fix docs for gnome_pixmap_load_file_at_size

Sat Aug 21 12:45:09 1999  George Lebl  <jirka@5z.com>

	* gnome-pixmap.c: pretty up the inline docs and divide
	  Description and Returns

	* gnome-scores.c: add the "/**" comments, but without any
	  descriptions

Sat Aug 21 12:19:53 1999  George Lebl  <jirka@5z.com>

	* gnome-dock.c: document gnome_dock_add_from_layout

	* gnome-doct.c,gnome-dock-layout.c: add #'s for crossreferencing

Sat Aug 21 11:54:16 1999  George Lebl  <jirka@5z.com>

	* gnome-procbar.c: completely document the API

Sat Aug 21 11:31:07 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry-edit.[ch]: there was a typo in the object, and
	  there was a call named gnome_dentry_get_dentry, which is the
	  wrong naming, it should be gnome_dentry_edit_get_dentry, so
	  I added the latter one and left in the first one for compatibility
	  but marked it as "not to be used". Also updated other parts of
	  the documentation

Sat Aug 21 11:18:47 1999  George Lebl  <jirka@5z.com>

	* gnome-dialog.c: the # is used to crosslink not the &, and
	  add a return type description to newv

Sat Aug 21 11:13:54 1999  George Lebl  <jirka@5z.com>

	* gnome-client.c: touched up docs for
	  gnome_client_get_global_config_prefix, still this file has
	  a bunch of things that need fixing in the docs

Sat Aug 21 11:06:57 1999  George Lebl  <jirka@5z.com>
