@@ -318,6 +318,11 @@ gnome_file_entry_new (char *history_id, char *browse_dialog_title)
 
 	fentry = gtk_type_new (gnome_file_entry_get_type ());
 
+        /* Keep in sync with gnome_entry_new() - or better yet, 
+           add a _construct() method once we are in development
+           branch. 
+        */
+
 	gnome_entry_set_history_id (GNOME_ENTRY (fentry->gentry), history_id);
 	gnome_entry_load_history (GNOME_ENTRY(fentry->gentry));
 	gnome_file_entry_set_title (fentry, browse_dialog_title);
